working on all possible variations of board
we have all placements and rotations and are able to rotate individual tiles

--- a/MicroRobots.ipynb
+++ b/MicroRobots.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,8 @@
     "import numpy as np\n",
     "import random\n",
     "import matplotlib.pyplot as plt\n",
-    "import scipy as sp"
+    "import scipy as sp\n",
+    "import itertools"
    ]
   },
   {
@@ -56,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,6 +77,10 @@
     "    def get_shape(self):\n",
     "        return self.matrix.shape[0]\n",
     "    \n",
+    "    def rotate_right(self):\n",
+    "        self.matrix = np.rot90(self.matrix, k=-1, axes=(0, 1))\n",
+    "        self.print_tile()\n",
+    "        \n",
     "    def print_tile(self):\n",
     "        for row in self.matrix:\n",
     "            for cell in row:\n",
@@ -111,7 +116,7 @@
     "            self.matrix[1][0].print_tile_row(x)\n",
     "            self.matrix[1][1].print_tile_row(x)\n",
     "            print(\"\\n\")\n",
-    "    \n",
+    "        \n",
     "    # deconstructs the board into a matrix of squares\n",
     "    def deconstruct_board(self):\n",
     "        tile_shape = self.matrix[0][0].get_shape()\n",
@@ -671,11 +676,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 441,
+   "execution_count": 80,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# of tile permutations 24\n",
+      "# of rotations per tile permutation 256\n",
+      "W 6 B 6 B 2 \n",
+      "\n",
+      "R 3 Y 4 W 3 \n",
+      "\n",
+      "B 3 G 4 W 5 \n",
+      "\n",
+      "\n",
+      "B 3 R 3 W 6 \n",
+      "\n",
+      "G 4 Y 4 B 6 \n",
+      "\n",
+      "W 5 W 3 B 2 \n",
+      "\n",
+      "\n",
+      "W 5 G 4 B 3 \n",
+      "\n",
+      "W 3 Y 4 R 3 \n",
+      "\n",
+      "B 2 B 6 W 6 \n",
+      "\n",
+      "\n",
+      "B 2 W 3 W 5 \n",
+      "\n",
+      "B 6 Y 4 G 4 \n",
+      "\n",
+      "W 6 R 3 B 3 \n",
+      "\n",
+      "\n",
+      "W 6 B 6 B 2 \n",
+      "\n",
+      "R 3 Y 4 W 3 \n",
+      "\n",
+      "B 3 G 4 W 5 \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# implement a function which rotates the boards and places them in the associated \"slot\" until all permutations have been achieved."
+    "# implement a function which rotates the boards and places them in the associated \"slot\" until all permutations have been achieved.\n",
+    "\n",
+    "def generate_all_permutations():\n",
+    "    b = build_actual_blackside_microrobots_board()\n",
+    "    # generate all possible placements with tile one\n",
+    "    tileOne = b.matrix[0][0]\n",
+    "    tileTwo = b.matrix[0][1]\n",
+    "    tileThree = b.matrix[1][0]\n",
+    "    tileFour = b.matrix[1][1]\n",
+    "    tiles = [tileOne, tileTwo, tileThree, tileFour]\n",
+    "    permutations_no_rotation = list(itertools.permutations(tiles))\n",
+    "    # here we have all of the placements of the tiles on the board\n",
+    "    print(\"# of tile permutations\", len(permutations_no_rotation))\n",
+    "\n",
+    "    rotations = [\"up\", \"right\", \"down\", \"left\"]    \n",
+    "    all_rotations = list(itertools.product(rotations, repeat=4))\n",
+    "    # here we have all the rotations per tile placement\n",
+    "    print(\"# of rotations per tile permutation\", len(all_rotations))\n",
+    "    print(\"\")\n",
+    "    \n",
+    "    # total possible boards will be = permutations_no_rotation * all_rotations\n",
+    "    tileOne.print_tile()\n",
+    "    print(\"\")\n",
+    "    tileOne.rotate_right()\n",
+    "    print(\"\")\n",
+    "    tileOne.rotate_right()\n",
+    "    print(\"\")\n",
+    "    tileOne.rotate_right()\n",
+    "    print(\"\")\n",
+    "    tileOne.rotate_right()\n",
+    "    \n",
+    "generate_all_permutations()"
    ]
   },
   {
