--- a/MicroRobots.ipynb
+++ b/MicroRobots.ipynb
@@ -391,7 +391,7 @@
     "            return\n",
     "        \n",
     "        # generate 4 arrays of 9 \n",
-    "        # TODO: the generation of these tiles is obvious not, itself, random. need to decide if this matters\n",
+    "        # TODO: the generation of these tiles is obviously not, itself, random. Ithis matters\n",
     "        split_squares = np.array_split(squares, 4)\n",
     "        board = Board(np.array([[Tile(1, split_squares[0].reshape(3,3)), Tile(2,split_squares[1].reshape(3,3))],\n",
     "                 [Tile(3,split_squares[2].reshape(3,3)), Tile(4, split_squares[3].reshape(3,3))]], dtype=np.object).reshape(2,2))\n",
