--- a/MicroRobots.ipynb
+++ b/MicroRobots.ipynb
@@ -330,24 +330,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "B 4 | P 6 | B 2 | Y 5 | Y 4 | G 6 | \n",
+      "R 2 | Y 6 | R 3 | W 2 | R 4 | Y 5 | \n",
       "\n",
-      "B 5 | B 6 | Y 3 | R 6 | W 5 | B 3 | \n",
+      "Y 3 | Y 1 | B 2 | Y 2 | W 5 | B 3 | \n",
       "\n",
-      "P 4 | Y 6 | P 3 | R 5 | W 6 | R 4 | \n",
+      "G 6 | R 1 | R 5 | P 3 | Y 4 | W 4 | \n",
       "\n",
-      "R 1 | R 2 | G 3 | W 1 | P 5 | W 3 | \n",
+      "R 6 | B 6 | B 5 | P 6 | W 3 | G 1 | \n",
       "\n",
-      "W 4 | Y 1 | B 1 | G 5 | G 2 | W 2 | \n",
+      "P 4 | B 1 | P 2 | P 5 | P 1 | G 2 | \n",
       "\n",
-      "R 3 | P 1 | Y 2 | G 4 | P 2 | G 1 | \n",
+      "B 4 | W 6 | W 1 | G 4 | G 5 | G 3 | \n",
       "\n"
      ]
     }
@@ -391,7 +391,8 @@
     "            return\n",
     "        \n",
     "        # generate 4 arrays of 9 \n",
-    "        # TODO: the generation of these tiles is obviously not, itself, random. Ithis matters\n",
+    "        # The generation of these tiles is obviously not, itself, random. I dont this matters because what we are really generating is \n",
+    "        # a random matrix and by randomness of actual color/number combos, fixing the placement of the tiles should not impact outcome\n",
     "        split_squares = np.array_split(squares, 4)\n",
     "        board = Board(np.array([[Tile(1, split_squares[0].reshape(3,3)), Tile(2,split_squares[1].reshape(3,3))],\n",
     "                 [Tile(3,split_squares[2].reshape(3,3)), Tile(4, split_squares[3].reshape(3,3))]], dtype=np.object).reshape(2,2))\n",
@@ -518,6 +519,10 @@
     "# TESTING RANDOMLY GENERATED THEORY\n",
     "\n",
     " - We questioned whether, just by nature, these boards tend to be connected even when randomly generated. The answer to that question is no.\n",
+    " \n",
+    "### Question:\n",
+    "\n",
+    "#### As n grows, either n of randomly\n",
     "\n",
     "##### KOLMOGOROV’S ZERO-ONE LAW WITH APPLICATIONS\n",
     " - http://math.uchicago.edu/~may/REU2017/REUPapers/McNamara.pdf"
