--- a/MicroRobots.ipynb
+++ b/MicroRobots.ipynb
@@ -522,7 +522,7 @@
     " \n",
     "### Question:\n",
     "\n",
-    "#### As n grows, either n of randomly\n",
+    "#### As n grows, either n of randomly generated graphs or actual n x n number of nodes, does the probability of connectedness approach 0 or 1?\n",
     "\n",
     "##### KOLMOGOROV’S ZERO-ONE LAW WITH APPLICATIONS\n",
     " - http://math.uchicago.edu/~may/REU2017/REUPapers/McNamara.pdf"
